<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:title="@string/menu_opcion1"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:title="@string/menu_opcion2"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="Usuario">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_opcion_1"
                    android:title="Suscripciones"/>
                <item
                    android:id="@+id/menu_opcion_2"
                    android:title="Patologías"/>
                <item
                    android:id="@+id/menu_opcion_4"
                    android:title="Configuración"/>
                <item
                    android:id="@+id/menu_opcion_5"
                    android:title="Más información"/>
            </group>
        </menu>
    </item>
</menu>